Fix spacing and button outlines This commit finalized the padding and margins between sections to better improve readability and flow of page layout. Also fixed the button outlines to improve visibility and contrast with backgrounds.

--- a/style.css
+++ b/style.css
@@ -68,18 +68,22 @@ a {
 .contenta {
     flex: 1;
     display: flex;
-    margin-bottom: 48px;
+    margin: 60px 0px;
     padding: 10px 200px;
 }
 
 .heroic {
     flex: 1;
+    gap: 16px;
+    margin-right: 36px;
 }
 
 .hero {
     flex: 1;
     display: flex;
     flex-direction: column;
+    gap: 16px;
+    margin-bottom: 16px;
 }
 
 .logo{
@@ -102,17 +106,20 @@ button {
     background-color: #3882F6;
     color: #E5E7EB;
     border-radius: 0.375rem;
-    border: none;
-    outline-color: #E5E7EB;
-    outline-width: 5px;
+    border-style: solid;
+    border-color: #E5E7EB;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
     font-weight: 600;
-    margin-top: 15px;
     padding: 5px 25px;
     cursor: pointer;
+}
+
+.herobutton {
+    border-style: solid;
+    border-color: #1F2937;
 }
 
 .heroimg {
@@ -133,19 +140,21 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 36px;
 }
 
 .infoheader {
     color: #1F2937;
     font-size: 36px;
     weight: 900;
+    margin: 24px;
 }
 
 .gallery {
     display: flex;
     justify-content: center;
     gap: 52px;
-    margin-top: 32px;
+    margin: 32px 0px;
 }
 
 .info {
@@ -157,17 +166,13 @@ button {
 }
 
 .contentc {
- 
     color: #1F2937;
-}
-
-.contentc {
     background-color: #E5E7EB;
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 200px;
+    padding: 50px 200px;
 }
 
 .quotes {
@@ -196,8 +201,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 48px;
-    padding: 10px 200px;
+    padding: 100px 200px;
 }
 
 .call {
@@ -206,7 +210,11 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 48px 96px;
+    padding: 24px 48px;
+}
+
+.action {
+    margin: 36px;
 }
 
 .signup {
